Use vanity import path.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -113,7 +113,7 @@ linters-settings:
   goimports:
     # Put imports beginning with prefix after 3rd-party packages.
     # It's a comma-separated list of prefixes.
-    local-prefixes: "github.com/creack/fdf"
+    local-prefixes: "go.creack.net/fdf"
 
   golint:
     # Minimal confidence for issues, default is 0.8.
